# astoria

./: .buildinfo  .git-blame-ignore-revs  .gitignore  .isort.cfg  .mailmap  Dockerfile  LICENSE  Makefile  README.md  astoria.toml  development.html  docker-compose.yml  genindex.html  index.html  mypy.ini  objects.inv  pyproject.toml  search.html  searchindex.js  shell.nix  spec.md  usage.html
.doctrees/: development.doctree  environment.pickle  index.doctree  usage.doctree
.doctrees/design/: code_format.doctree  history.doctree  index.doctree  ipc.doctree  metadata.doctree  requirements.doctree  state_managers_consumers.doctree  usercode_drives.doctree
.doctrees/development/: index.doctree  manager.doctree
.doctrees/implementation/: data_components.doctree  disk_types.doctree  index.doctree
.doctrees/implementation/consumers/: astctl.doctree  astwifid.doctree  index.doctree
.doctrees/implementation/managers/: astdiskd.doctree  astmetad.doctree  astprocd.doctree  astwifid.doctree  index.doctree
.github/workflows/: docs.yml  packages.yml  pypi.yml  repo.yml  tests.yml
_modules/: index.html  typing.html
_modules/astoria/: astwifid.html
_modules/astoria/astdiskd/: disk_manager.html
_modules/astoria/astprocd/: process_manager.html
_modules/astoria/astwifid/: hotspot_lifecycle.html  lifecycle.html
_modules/astoria/common/: code_status.html  disk_constraints.html  manager_requests.html  metadata.html
_modules/astoria/consumers/: astwifid.html
_modules/astoria/managers/: astdiskd.html  astmetad.html  astprocd.html
_sources/: index.rst.txt  usage.rst.txt
_sources/design/: code_format.rst.txt  ipc.rst.txt  state_managers_consumers.rst.txt
_sources/implementation/: data_components.rst.txt  index.rst.txt
_sources/implementation/consumers/: index.rst.txt
_sources/implementation/managers/: astdiskd.rst.txt  astprocd.rst.txt  astwifid.rst.txt
astoria/: __init__.py  asthttpd.py  astwifid.py  py.typed
astoria/api/: __init__.py
astoria/astctl/: command.py  list_disks.py
astoria/astctl/metadata/: set.py  show.py
astoria/astctl/static_disks/: add.py  remove.py  remove_all.py
astoria/astctl/usercode/: kill.py  log.py  restart.py  show.py  trigger.py
astoria/astdiskd/: __init__.py  disk_manager.py  disk_provider.py  static.py  udisks.py
astoria/astmetad/: metadata_cache.py  metadata_disk_lifecycle.py  metadata_manager.py
astoria/astprocd/: __init__.py  process_manager.py  usercode_lifecycle.py
astoria/astraucd/: __init__.py  rauc_manager.py  update_lifecycle.py
astoria/astwifid/: __init__.py  hotspot_lifecycle.py  lifecycle.py  wifi_manager.py
astoria/common/: __init__.py  broadcast_event.py  bundle.py  code_status.py  config.py  consumer.py  data_component.py  disk_constraints.py  drive.py  manager.py  manager_requests.py  metadata.py  mutation_requests.py  topic.py  update_state.py  usercode_strategy.py
astoria/common/components/: __init__.py  component.py  manager.py
astoria/common/config/: __init__.py  system.py  user.py
astoria/common/disks/: __init__.py  constraints.py  structs.py  type_calculator.py
astoria/common/ipc/: __init__.py  broadcast_event.py  manager_messages.py  manager_requests.py
astoria/common/messages/: __init__.py  astdiskd.py  astmetad.py  astprocd.py  base.py  disk.py
astoria/common/mixins/: __init__.py  disk_handler.py  metadata_handler.py
astoria/common/mqtt/: __init__.py  broadcast_helper.py  registry.py  topic.py  wrapper.py
astoria/components/: astdiskd.py  astprocd.py  diskd.py
astoria/consumers/: __init__.py  astwifid.py
astoria/daemon/: __init__.py  app.py  daemon.py  info.py  response_models.py
astoria/managers/: __init__.py  astdiskd.py  astmetad.py  astprocd.py  asttestd.py
astoria_old/: astwifid.py
astoria_old/astctl/: __init__.py  command.py  list_disks.py
astoria_old/astdiskd/: disk_manager.py  disk_provider.py  static.py  udisks.py
astoria_old/astmetad/: metadata_disk_lifecycle.py  metadata_manager.py
astoria_old/astprocd/: process_manager.py  usercode_lifecycle.py
astoria_old/common/: metadata.py
debian/: .gitignore  astdiskd.service  astmetad.service  astprocd.service  changelog  control  copyright  py3dist-overrides  python3-astoria.install  python3-astoria.postinst  python3-astoria.postrm  rules
design/: code_format.html  history.html  index.html  ipc.html  metadata.html  requirements.html  state_managers_consumers.html  usercode_drives.html
development/: index.html  manager.html
docker/: astoria.toml  mosquitto.conf
docs/: conf.py  development.rst  getting-started.rst  index.rst  metadata.rst  mqtt.rst  usage.rst
docs/_code/: astoria.json  asttestd.py  robot-settings.toml
docs/design/: code_format.rst  index.rst  ipc.rst  metadata.rst  requirements.rst  usercode_drives.rst
docs/development/: index.rst  manager.rst
docs/implementation/: disk_types.rst  index.rst
docs/overview/: history.rst  index.rst  requirements.rst
docs/state_managers/: astprocd.rst  astwifid.rst  index.rst
docs/usb_drives/: disk_types.rst  index.rst  usercode_drives.rst
implementation/: data_components.html  disk_types.html  index.html
implementation/consumers/: astctl.html  astwifid.html  index.html
implementation/managers/: astdiskd.html  astmetad.html  astprocd.html  astwifid.html  index.html
libastoria/: Makefile  pyproject.toml
libastoria/libastoria/: __init__.py  exceptions.py  models.py
libastoria/libastoria/client/: __init__.py  asyncio.py  client.py  sync.py
protocol/: README.md
stubs/dbus_next/: constants.pyi  errors.pyi  signature.pyi
stubs/gi/: __init__.py
stubs/gmqtt/: __init__.pyi  client.pyi  constants.pyi
stubs/pydbus/: __init__.py  auto_names.py  bus.py  generic.py  publication.py  registration.py
stubs/systemd/: __init__.py  daemon.pyi  journal.pyi
test/: robot-settings.toml
tests/: conftest.py  test_client.py  test_module.py
tests/common/: test_bundle.py  test_code_status.py  test_config.py  test_disk_constraints.py  test_metadata.py  test_topic.py
tests/libastoria/: __init__.py  test_typing.py
(+128 files in other folders)
