[tool.poetry]
name = "astoria"
version = "0.0.0"
description = "EXPERIMENT"
authors = [
    "Dan Trickey <srobo-astoria@trickey.io>",
    "Karina Kwiatek <kkwiatek@studentrobotics.org>",
]
license = "MIT"
readme = "README.md"
classifiers = [
    "Private :: Do Not Upload",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8"
libastoria = "^1.0.0"
tomli-w = "^1.0.0"


[tool.poetry.dev-dependencies]
libastoria = { path = "libastoria/", develop = true }
flake8 = "*"
flake8-commas = "*"
flake8-comprehensions = "*"
flake8-debugger = "*"
flake8-docstrings = "*"
flake8-isort = "*"
flake8-mutable = "*"
flake8-todo = "*"
mypy = "*"
pytest = "*"
pytest-asyncio = "*"
responses = "^0.22.0"
rope = "*"
isort = {version = "*",extras = ["pyproject"]}
types-click = "*"
types-requests = "^2.28.11.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
